# docs2prompt

./: .gitignore  README.md  github.py  llm-docs.txt  main.py  pyproject.toml  test.ipynb  test.txt  utils.py  web_docs.py
docs2prompt/: __init__.py  api.py  github.py  main.py  utils.py  web_docs.py
