[project]
name = "document-to-prompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "click>=8.1.8",
    "html2text>=2024.2.26",
    "ipykernel>=6.29.5",
    "requests (>=2.32.3,<3.0.0)",
]
